--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,7 @@
         <div class="input-container">
         <h:form id="reg">
             <h2>Create Template</h2>
-            <h:panelGrid columns="3" columnClasses="titleCell" styleClass="addNewTable">
+            <h:panelGrid columns="3" styleClass="addNewTable">
                 <h:outputLabel for="fromname" value="From Name:" />
                 <h:inputText id="fromname" value="#{newTemplate.fromname}" />
                 <h:message for="fromname" errorClass="invalid" />
