--- a/src/main/webapp/target.xhtml
+++ b/src/main/webapp/target.xhtml
@@ -28,7 +28,7 @@
     </h:panelGrid>
       
      <h:panelGrid columns="1" style="margin-top:10px"> 
-        <p:commandButton id="nextButton" value="Next" action="schedule" ajax="false"/>
+        <p:commandButton id="nextButton" value="Go to Schedule" action="schedule" ajax="false"/>
      </h:panelGrid>   
 
   
