--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,7 +13,9 @@
         
         <p:menubar>  
         <p:submenu label="Menu">
-           <p:menuitem value="Batch Campaign" url="/template.jsf" />   
+           <p:menuitem value="Templates" url="/templates.jsf" />
+           <p:menuitem value="Targets" url="/targets.jsf" />
+           <p:menuitem value="Batch Campaign" url="/template.jsf" /> 
         </p:submenu>
         </p:menubar>
         
