--- a/src/main/webapp/targets.xhtml
+++ b/src/main/webapp/targets.xhtml
@@ -13,7 +13,10 @@
         
         <p:menubar>  
         <p:submenu label="Menu">
-           <p:menuitem value="Batch Campaign" url="/template.jsf" />   
+           <p:menuitem value="Home" url="/" />
+           <p:menuitem value="Templates" url="/templates.jsf" />
+           <p:menuitem value="Targets" url="/targets.jsf" />
+           <p:menuitem value="Batch Campaign" url="/template.jsf" />  
         </p:submenu>
         </p:menubar>
         
