--- a/src/main/webapp/edittarget.xhtml
+++ b/src/main/webapp/edittarget.xhtml
@@ -21,6 +21,23 @@
     <p:inputText id="name" value="#{targetEditor.name}" />
     <h:outputLabel for="association" value="Association: " />
     <p:inputText id="association" value="#{targetEditor.association}" />
+
+    <h:outputLabel for="dbhost" value="Database Host: " />
+    <p:inputText id="dbhost" value="#{targetEditor.dbhost}" />
+    <h:outputLabel for="dbms" value="Database System: " />
+    <p:selectOneMenu value="#{targetEditor.dbms}">  
+            <f:selectItem itemLabel="Select One" itemValue="" />  
+            <f:selectItem itemLabel="MS SQL Server" itemValue="sqlserver" />  
+            <f:selectItem itemLabel="MySQL" itemValue="mysql" />  
+            <f:selectItem itemLabel="PostgreSQL" itemValue="postgresql" /> 
+    </p:selectOneMenu> 
+    <h:outputLabel for="dbport" value="Database Port: " />
+    <p:inputText id="dbport" value="#{targetEditor.dbport}" />   
+    <h:outputLabel for="dbuser" value="Database Username: " />
+    <p:inputText id="dbuser" value="#{targetEditor.dbuser}" />   
+    <h:outputLabel for="dbpassword" value="Database Password: " />
+    <p:inputText id="dbpassword" value="" /> 
+    
     <h:outputLabel for="queryText" value="Query Text: " />
     <p:inputTextarea id="queryText" value="#{targetEditor.queryText}" />
     </h:panelGrid>
