--- a/src/main/webapp/targets.xhtml
+++ b/src/main/webapp/targets.xhtml
@@ -95,7 +95,7 @@
     <p:inputTextarea id="queryText" rows="10" cols="50" value="#{targetCreator.queryText}" />
     </h:panelGrid>
     
-        <h:panelGrid columns="1" style="float:left;margin-top:10px;">  
+        <h:panelGrid columns="1" style="margin-top:10px;">  
         <p:commandButton id="submitButton" value="Create" action="#{targetCreator.addNew}" update="createdisplay" oncomplete="PF('createdisplay').show()"  
                         icon="ui-icon-disk" />
                         
