--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -15,9 +15,11 @@
         <p:submenu label="Menu">
            <p:menuitem value="Templates" url="/templates.jsf" />
            <p:menuitem value="Targets" url="/targets.jsf" />
-           <p:menuitem value="Batch Campaign" url="/template.jsf" /> 
+           <p:menuitem value="Batch Campaign" url="/template.jsf" />
+           <p:menuitem value="Reporting" url="/reporting.jsf" />  
         </p:submenu>
         </p:menubar>
+
         
        <h2>Active Templates</h2>  
        <p:dataTable id="dataTable" var="_template" value="#{templatesL.templates}"
