--- a/src/main/webapp/targets.xhtml
+++ b/src/main/webapp/targets.xhtml
@@ -90,7 +90,7 @@
     <h:outputLabel for="dbuser" value="Database Username: " />
     <p:inputText id="dbuser" value="#{targetCreator.dbuser}" />   
     <h:outputLabel for="dbpassword" value="Database Password: " />
-    <p:inputText id="dbpassword" value="#{targetCreator.dbpassword}" />           
+    <p:password id="dbpassword" value="#{targetCreator.dbpassword}" />           
     <h:outputLabel for="queryText" value="Query Text: " />
     <p:inputTextarea id="queryText" rows="10" cols="50" value="#{targetCreator.queryText}" />
     </h:panelGrid>
