--- a/src/main/webapp/edittarget.xhtml
+++ b/src/main/webapp/edittarget.xhtml
@@ -40,7 +40,7 @@
     <h:outputLabel for="dbuser" value="Database Username: " />
     <p:inputText id="dbuser" value="#{targetEditor.dbuser}" />   
     <h:outputLabel for="dbpassword" value="Database Password: " />
-    <p:password id="dbpassword" value="" /> 
+    <p:password id="dbpassword" value="#{targetEditor.dbpassword}" /> 
     
     <h:outputLabel for="queryText" value="Query Text: " />
     <p:inputTextarea id="queryText" value="#{targetEditor.queryText}" />
