--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,8 @@
            <p:menuitem value="Templates" url="/templates.jsf" />
            <p:menuitem value="Targets" url="/targets.jsf" />
            <p:menuitem value="Batch Campaign" url="/template.jsf" />
-           <p:menuitem value="Reporting" url="/reporting.jsf" />  
+           <p:menuitem value="Batch Reporting" url="/reporting.jsf" /> 
+           <p:menuitem value="Transactional Reporting" url="/txreporting.jsf" /> 
         </p:submenu>
         </p:menubar>
 
