--- a/src/main/webapp/reporting.xhtml
+++ b/src/main/webapp/reporting.xhtml
@@ -16,7 +16,8 @@
            <p:menuitem value="Home" url="/" />
            <p:menuitem value="Templates" url="/templates.jsf" />
            <p:menuitem value="Targets" url="/targets.jsf" />
-           <p:menuitem value="Batch Campaign" url="/template.jsf" /> 
+           <p:menuitem value="Batch Campaign" url="/template.jsf" />
+           <p:menuitem value="Transactional Reporting" url="/txreporting.jsf" />
         </p:submenu>
         </p:menubar>
 
